lib/velosiparser/tests/vrs/interface/writeactions_02_wrong_separator_expected.txt
error: expected `;`, found `,`
     --> tests/vrs/interface/writeactions_02_wrong_separator.vrs:1:22
      |
    1 |  WriteActions { A -> B,  A -> B; }
      |                       ^ help: add `;` here.
